Update aichat config.

--- a/home/dot_config/aichat/config.yaml
+++ b/home/dot_config/aichat/config.yaml
@@ -1,48 +1,47 @@
 # see https://github.com/sigoden/aichat/blob/main/config.example.yaml
 
-
 # ---- llm ----
-model: openai:gpt-4o             # Specify the LLM to use
-temperature: null                # Set default temperature parameter
-top_p: null                      # Set default top-p parameter, range (0, 1)
+model: ollama:deepseek
+temperature: null # Set default temperature parameter
+top_p: null # Set default top-p parameter, range (0, 1)
 
 # ---- behavior ----
-stream: true                     # Controls whether to use the stream-style API.
-save: true                       # Indicates whether to persist the message
-keybindings: emacs               # Choose keybinding style (emacs, vi)
-editor: null                     # Specifies the command used to edit input buffer or session. (e.g. vim, emacs, nano).
-wrap: no                         # Controls text wrapping (no, auto, <max-width>)
-wrap_code: false                 # Enables or disables wrapping of code blocks
+stream: true # Controls whether to use the stream-style API.
+save: true # Indicates whether to persist the message
+keybindings: vi # Choose keybinding style (emacs, vi)
+editor: null # Specifies the command used to edit input buffer or session. (e.g. vim, emacs, nano).
+wrap: no # Controls text wrapping (no, auto, <max-width>)
+wrap_code: false # Enables or disables wrapping of code blocks
 
 # ---- function-calling ----
 # Visit https://github.com/sigoden/llm-functions for setup instructions
-function_calling: true           # Enables or disables function calling (Globally).
-mapping_tools:                   # Alias for a tool or toolset
-  fs: 'fs_cat,fs_ls,fs_mkdir,fs_rm,fs_write'
-use_tools: fs                    # Which tools to use by default. (e.g. 'fs,web_search')
+function_calling: true # Enables or disables function calling (Globally).
+mapping_tools: # Alias for a tool or toolset
+  fs: "fs_cat,fs_ls,fs_mkdir,fs_rm,fs_write"
+use_tools: 'fs,web_search' # Which tools to use by default.
 
 # ---- prelude ----
-prelude: null                    # Set a default role or session to start with (e.g. role:<name>, session:<name>, <session>:<role>)
-repl_prelude: null               # Overrides the `prelude` setting specifically for conversations started in REPL
-agent_prelude: null              # Set a session to use when starting a agent. (e.g. temp, default)
+repl_prelude: null               # Set a default role or session for REPL mode (e.g. role:<name>, session:<name>, <session>:<role>)
+cmd_prelude: null                # Set a default role or session for CMD mode (e.g. role:<name>, session:<name>, <session>:<role>)
+agent_prelude: null              # Set a session to use when starting a agent (e.g. temp, default)
 
 # ---- session ----
 # Controls the persistence of the session. if true, auto save; if false, not save; if null, asking the user
-save_session: null
+save_session: true
 # Compress session when token count reaches or exceeds this threshold
 compress_threshold: 4000
 # Text prompt used for creating a concise summary of session message
-summarize_prompt: 'Summarize the discussion briefly in 200 words or less to use as a prompt for future context.'
+summarize_prompt: "Summarize the discussion briefly in 200 words or less to use as a prompt for future context."
 # Text prompt used for including the summary of the entire session
-summary_prompt: 'This is a summary of the chat history as a recap: '
+summary_prompt: "This is a summary of the chat history as a recap: "
 
 # ---- RAG ----
 # See [RAG-Guide](https://github.com/sigoden/aichat/wiki/RAG-Guide) for more details.
 rag_embedding_model: null
-rag_reranker_model: null                    # Specifies the rerank model to use
-rag_top_k: 5                                # Specifies the number of documents to retrieve
-rag_chunk_size: null                        # Specifies the chunk size
-rag_chunk_overlap: null                     # Specifies the chunk overlap
+rag_reranker_model: null # Specifies the rerank model to use
+rag_top_k: 5 # Specifies the number of documents to retrieve
+rag_chunk_size: null
+rag_chunk_overlap: null
 # Defines the query structure using variables like __CONTEXT__ and __INPUT__ to tailor searches to specific needs
 rag_template: |
   Answer the query based on the context while respecting the rules. (user query, some textual context and rules, all inside xml tags)
@@ -69,23 +68,20 @@ document_loaders:
   # You can add custom loaders using the following syntax:
   #   <file-extension>: <command-to-load-the-file>
   # Note: Use `$1` for input file and `$2` for output file. If `$2` is omitted, use stdout as output.
-  pdf: 'pdftotext $1 -'                         # Load .pdf file, see https://poppler.freedesktop.org to set up pdftotext
-  docx: 'pandoc --to plain $1'                  # Load .docx file, see https://pandoc.org to set up pandoc
+  pdf: "pdftotext $1 -" # Load .pdf file, see https://poppler.freedesktop.org to set up pdftotext
+  docx: "pandoc --to plain $1" # Load .docx file, see https://pandoc.org to set up pandoc
 
 # ---- appearance ----
-highlight: true                  # Controls syntax highlighting
-light_theme: false               # Activates a light color theme when true. env: AICHAT_LIGHT_THEME
+highlight: true # Controls syntax highlighting
+light_theme: false # env: AICHAT_LIGHT_THEME
 # Custom REPL left/right prompts, see https://github.com/sigoden/aichat/wiki/Custom-REPL-Prompt for more details
-left_prompt:
-  '{color.green}{?session {?agent {agent}>}{session}{?role /}}{!session {?agent {agent}>}}{role}{?rag @{rag}}{color.cyan}{?session )}{!session >}{color.reset} '
-right_prompt:
-  '{color.purple}{?session {?consume_tokens {consume_tokens}({consume_percent}%)}{!consume_tokens {consume_tokens}}}{color.reset}'
+left_prompt: "{color.green}{?session {?agent {agent}>}{session}{?role /}}{!session {?agent {agent}>}}{role}{?rag @{rag}}{color.cyan}{?session )}{!session >}{color.reset} "
+right_prompt: "{color.purple}{?session {?consume_tokens {consume_tokens}({consume_percent}%)}{!consume_tokens {consume_tokens}}}{color.reset}"
 
 # ---- misc ----
-serve_addr: 127.0.0.1:8000                  # Default serve listening address
-user_agent: null                            # Set User-Agent HTTP header, use `auto` for aichat/<current-version>
-save_shell_history: true                    # Whether to save shell execution command to the history file
-# URL to sync model changes from, e.g., https://cdn.jsdelivr.net/gh/sigoden/aichat@main/models.yaml
+serve_addr: 127.0.0.1:8000
+user_agent: auto # Set User-Agent HTTP header, use `auto` for aichat/<current-version>
+save_shell_history: true
 sync_models_url: https://raw.githubusercontent.com/sigoden/aichat/refs/heads/main/models.yaml
 
 # ---- clients ----
@@ -127,7 +123,7 @@ clients:
   - type: openai-compatible
     name: local
     api_base: http://localhost:8080/v1
-    api_key: xxx                                      # Optional
+    api_key: xxx
     models:
       - name: llama3.1
         max_input_tokens: 128000
@@ -144,7 +140,7 @@ clients:
     api_base: https://generativelanguage.googleapis.com/v1beta
     patch:
       chat_completions:
-        '.*':
+        ".*":
           body:
             safetySettings:
               - category: HARM_CATEGORY_HARASSMENT
@@ -170,31 +166,36 @@ clients:
         supports_function_calling: true
       - name: mistral
         real_name: mistral:latest
-        max_input_tokens: 8192
+        max_input_tokens: 32768
+        supports_function_calling: true
       - name: mxbai
         real_name: mxbai-embed-large:latest
         type: embedding
-        max_tokens_per_chunk: 8192
         default_chunk_size: 1000
         max_batch_size: 100
+        max_tokens_per_chunk: 512
         max_input_tokens: 200000
       - name: mixtral
         real_name: mixtral:8x7b
-        max_input_tokens: 8192
+        max_input_tokens: 32768
       - name: codellama
         real_name: codellama:13b
-        max_input_tokens: 8192
-      - name: qwen
+        max_input_tokens: 16384
+      - name: qwen2.5-coder
         real_name: qwen2.5-coder:14b
         max_input_tokens: 32768
+        supports_function_calling: true
       - name: deepseek
         real_name: deepseek-r1:8b
         max_input_tokens: 131072
+        supports_reasoning: true
+      - name: nomic-embed
+        real_name: nomic-embed-text:latest
+        type: embedding
+        default_chunk_size: 1000
+        max_batch_size: 50
+      - name: qwen3
+        real_name: qwen3:8b
+        max_input_tokens: 40960
         supports_function_calling: true
         supports_reasoning: true
-
-  # See https://openrouter.ai/docs#quick-start
-  - type: openai-compatible
-    name: openrouter
-    api_base: https://openrouter.ai/api/v1
-    api_key: xxx
