--- a/home/dot_aider/dot_aider.model.settings.yml
+++ b/home/dot_aider/dot_aider.model.settings.yml
@@ -6,25 +6,37 @@
     num_ctx: 8192
 - name: ollama/mistral:latest
   extra_params:
-    num_ctx: 8192
+    num_ctx: 32768
 - name: ollama_chat/mistral:latest
   extra_params:
-    num_ctx: 8192
+    num_ctx: 32768
 - name: ollama/mixtral:8x7b
   extra_params:
-    num_ctx: 8192
+    num_ctx: 32768
 - name: ollama_chat/mixtral:8x7b
   extra_params:
-    num_ctx: 8192
+    num_ctx: 32768
 - name: ollama/llama3.2:latest
   extra_params:
-    num_ctx: 8192
+    num_ctx: 131072
 - name: ollama_chat/llama3.2:latest
   extra_params:
-    num_ctx: 8192
+    num_ctx: 131072
 - name: ollama/deepseek-r1:8b
   extra_params:
     num_ctx: 8192
 - name: ollama_chat/deepseek-r1:8b
   extra_params:
     num_ctx: 8192
+- name: ollama/codellama:13b
+  extra_params:
+    num_ctx: 16384
+- name: ollama_chat/codellama:13b
+  extra_params:
+    num_ctx: 16384
+- name: ollama/qwen3:8b
+  extra_params:
+    num_ctx: 40960
+- name: ollama_chat/qwen3:8b
+  extra_params:
+    num_ctx: 40960
