--- a/home/AppData/Roaming/Code/User/profiles/-70f5752b/settings.json
+++ b/home/AppData/Roaming/Code/User/profiles/-70f5752b/settings.json
@@ -134,6 +134,7 @@
     "explorer.excludeGitIgnore": false,
     "files.trimFinalNewlines": true,
     "files.trimTrailingWhitespace": true,
+    "git.openRepositoryInParentFolders": "always",
     "github.copilot.enable": {
         "*": false,
         "markdown": false,
