--- a/home/AppData/Roaming/Code/User/profiles/-53714bc5/settings.json
+++ b/home/AppData/Roaming/Code/User/profiles/-53714bc5/settings.json
@@ -106,7 +106,7 @@
     "diffEditor.wordWrap": "on",
     "editor.defaultColorDecorators": "auto",
     "editor.fontFamily": "'FiraCode Nerd Font Mono', 'Cascadia Code', Consolas, 'Courier New', monospace",
-    "editor.minimap.autohide": true,
+    "editor.minimap.autohide": "mouseover",
     "editor.minimap.renderCharacters": false,
     "editor.minimap.scale": 3,
     "editor.quickSuggestions": {
@@ -145,7 +145,8 @@
     "github.copilot.chat.editor.temporalContext.enabled": true,
     "github.copilot.enable": {
         "python": false,
-        "quarto": false
+        "quarto": false,
+        "yaml": false
     },
     "githubLocalActions.dockerDesktopPath": "C:/Program Files/Docker/Docker/Docker Desktop.exe",
     "interactiveWindow.executeWithShiftEnter": true,
@@ -364,5 +365,6 @@
     "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
     "workbench.colorTheme": "Night Owl",
     "workbench.iconTheme": "material-icon-theme",
-    "workbench.tree.renderIndentGuides": "always"
+    "workbench.tree.renderIndentGuides": "always",
+    "terminal.integrated.sendKeybindingsToShell": true
 }
