--- a/home/AppData/Roaming/Code/User/profiles/-70f5752b/settings.json
+++ b/home/AppData/Roaming/Code/User/profiles/-70f5752b/settings.json
@@ -101,7 +101,7 @@
     "editor.defaultColorDecorators": "auto",
     "editor.definitionLinkOpensInPeek": true,
     "editor.fontFamily": "'FiraCode Nerd Font Mono', 'JuliaMono', Consolas, 'Courier New', monospace",
-    "editor.minimap.autohide": true,
+    "editor.minimap.autohide": "mouseover",
     "editor.minimap.renderCharacters": false,
     "editor.minimap.scale": 3,
     "editor.mouseWheelZoom": true,
