--- a/home/AppData/Roaming/Code/User/profiles/5278a1e2/settings.json
+++ b/home/AppData/Roaming/Code/User/profiles/5278a1e2/settings.json
@@ -332,5 +332,5 @@
     "chat.todoListTool.enabled": true,
     "chat.math.enabled": true,
     "editor.aiStats.enabled": true,
-    "fontAwesomeAutocomplete.version": "6",
+    "fontAwesomeAutocomplete.version": "6"
 }
