--- a/home/AppData/Roaming/Code/User/settings.json
+++ b/home/AppData/Roaming/Code/User/settings.json
@@ -262,20 +262,20 @@
     "files.autoSave": "onFocusChange",
     "files.defaultLanguage": "${activeEditorLanguage}",
     "files.exclude": {
-        "**/*.html": false,
-        "**/*_cache": false,
-        "**/.history/**": false,
-        "**/.hypothesis": false,
-        "**/.tmp-projections": false,
-        "**/.venv": false,
-        "**/.virtual_documents": false,
-        "**/.vs": false,
-        "**/__pycache__": false,
-        "**/bin": false,
-        "**/History_**": false,
-        "**/obj": false,
-        "**/TestResults": false,
-        "artifacts": false
+        "**/*.html": true,
+        "**/*_cache": true,
+        "**/.history/**": true,
+        "**/.hypothesis": true,
+        "**/.tmp-projections": true,
+        "**/.venv": true,
+        "**/.virtual_documents": true,
+        "**/.vs": true,
+        "**/__pycache__": true,
+        "**/bin": true,
+        "**/History_**": true,
+        "**/obj": true,
+        "**/TestResults": true,
+        "artifacts": true
     },
     "files.insertFinalNewline": true,
     "files.trimFinalNewlines": true,
