Update VS Code application settings.

--- a/home/AppData/Roaming/Code/User/settings.json
+++ b/home/AppData/Roaming/Code/User/settings.json
@@ -949,6 +949,7 @@
     "workbench.editor.doubleClickTabToToggleEditorGroupSizes": "maximize",
     "workbench.editor.highlightModifiedTabs": true,
     "workbench.editor.historyBasedLanguageDetection": true,
+    "workbench.editor.titleScrollbarVisibility": "visible",
     "workbench.panel.showLabels": false,
     "workbench.settings.applyToAllProfiles": [
         "breadcrumbs.enabled",
@@ -1148,6 +1149,7 @@
         "workbench.editor.enablePreview",
         "workbench.editor.highlightModifiedTabs",
         "workbench.editor.historyBasedLanguageDetection",
+        "workbench.editor.titleScrollbarVisibility",
         "workbench.layoutControl.enabled",
         "workbench.panel.showLabels",
         "xml.codeLens.enabled",
